syntax = "proto3";

package envoy.config.filter.http.tap.v3alpha;

option java_outer_classname = "TapProto";
option java_multiple_files = true;
option java_package = "io.envoyproxy.envoy.config.filter.http.tap.v3alpha";

import "envoy/config/common/tap/v3alpha/common.proto";

import "udpa/api/annotations/versioning.proto";

import "validate/validate.proto";

// [#protodoc-title: Tap]
// Tap :ref:`configuration overview <config_http_filters_tap>`.
// [#extension: envoy.filters.http.tap]

// Top level configuration for the tap filter.
message Tap {
  option (udpa.api.annotations.versioning).previous_message_type =
      "envoy.config.filter.http.tap.v2alpha.Tap";

  // Common configuration for the HTTP tap filter.
  common.tap.v3alpha.CommonExtensionConfig common_config = 1
      [(validate.rules).message = {required: true}];
}
